making some adjustment of pages

--- a/team.html
+++ b/team.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./style/team.css">
+    <link rel="stylesheet" href="./Style/team.css">
     
 </head>
 <body>
@@ -182,4 +182,4 @@
     <div class="footer"></div>
 </body>
 </html>
-<script src="./script/team.js"></script>
+<script src="./Scripts/team.js"></script>
