make some adjustment

--- a/services.html
+++ b/services.html
@@ -86,6 +86,50 @@
         </div>
     </div>
 
+    <!-- Div benefits -->
+    <div class="benefit_section section">
+        <div class="container_benefit">
+            <div class="benefit_title">
+                <h3 class="label_header">Benefits</h3>
+                <h3 class="large_heading benifit_large">Faster, cheaper, and more accurate</h3>
+                <h6 class="subheader">Supercharge your medical coding operations</h6>
+            </div>
+            <div class="benefit_grid">
+                <div>
+                    <img src="https://assets.website-files.com/5e6c01bb5212506d6c119069/5e81210fd802d6d4d78cc141_cost.svg" alt="">
+                    <h6 class="h6_small">Cost</h6>
+                    <p class="text_large">Reduce the total cost of your coding operations by up to 70%.</p>
+                </div>
+                <div>
+                    <img src="https://assets.website-files.com/5e6c01bb5212506d6c119069/5e81244ea7eca1517f971f83_scale.svg" alt="">
+                    <h6 class="h6_small">Scale</h6>
+                    <p class="text_large">Effortlessly add the capacity to code millions of charts per day.</p>
+                </div>
+                <div>
+                    <img src="https://assets.website-files.com/5e6c01bb5212506d6c119069/5e811b57a7eca1abcc96f85e_speed.svg" alt="">
+                    <h6 class="h6_small">Speed</h6>
+                    <p class="text_large">Cut your coding turnaround by days, not hours or minutes.</p>
+                </div>
+                <div>
+                    <img src="https://assets.website-files.com/5e6c01bb5212506d6c119069/5e81244e957e0aca8631fe64_reliability.svg" alt="">
+                    <h6 class="h6_small">Reliability</h6>
+                    <p class="text_large">Ensure that your coding operations never slow down or stop.</p>
+                </div>
+                <div>
+                    <img src="https://assets.website-files.com/5e6c01bb5212506d6c119069/5e81250b9d7551effbcd8483_accuracy.svg" alt="">
+                    <h6 class="h6_small">Accuracy</h6>
+                    <p class="text_large">Instantly reduce claim denials and mitigate audit risk.</p>
+                </div>
+                <div>
+                    <img src="https://assets.website-files.com/5e6c01bb5212506d6c119069/5e81235429502fec7abc4315_security.svg" alt="">
+                    <h6 class="h6_small">Security</h6>
+                    <p class="text_large">Keep your PHI secure with industry leading technology and protocol.</p>
+                </div>
+            </div>
+            <a href="" class="button button_outline" id="benefit_btn">REQUEST A CALL</a>
+        </div>
+    </div>
+
     <!-- footer section -->
     <div id="footerfun_section"></div>
 </body>
