more than half contact page completed

--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="Style/index.css" />
+    <link rel="stylesheet" href="Style/navbar_style.css" />
   </head>
   <body>
+    <div id="nav_container"></div>
     <div id="header">
       <div id="title">
         <h1>AI built for medical coding</h1>
@@ -69,6 +71,7 @@
       </div>
     </div>
     <button id="middle_button">EXPLORE SERVICES</button>
+
     <div id="animated">
       <h1>Fathom powers coding operations across</h1>
       <div>
@@ -149,6 +152,28 @@
         </p>
       </div>
     </div>
+    <button id="last_button">Schedule a call</button>
+
+    <div id="last">
+      <img
+        src="https://assets.website-files.com/5e6c01bb5212506d6c119069/5e86784321e17d5b3e1ca947_dots-left.svg"
+        alt=""
+      />
+      <h1>Industry news and insights</h1>
+      <h2>Stay up to date with the latest from the Fathom team</h2>
+
+      <div id="blogcontainer"></div>
+    </div>
+
+    <div id="lastdiv">
+      <h1>Ready to get started?</h1>
+      <button>SCHEDULE A CALL</button>
+      <button>REQUEST A QUOTE</button>
+    </div>
+
+    <div id="footer"></div>
+
+    <!-- extra -->
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
@@ -158,3 +183,4 @@
     </script>
   </body>
 </html>
+<script type="module" src="Scripts/index.js"></script>
