in progress contact page

--- a/contact.html
+++ b/contact.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="Style/contact.css" />
+    <link rel="stylesheet" href="Style/navbar_style.css" />
   </head>
   <body>
+    <div id="nav_container"></div>
     <div id="header">
       <div id="title">
         <h1>Ready to supercharge your coding operations?</h1>
@@ -60,5 +62,50 @@
         />
       </div>
     </div>
+
+    <div id="last">
+      <h1>Other ways to get in touch</h1>
+      <p>
+        Interested in career opportunities with Fathom? Check out our
+        <span>current openings</span> or email
+        <span>careers@fathomhealth.com.</span>
+      </p>
+      <div id="insidediv">
+        <div class="box">
+          <img
+            src="https://assets.website-files.com/5e6c01bb5212506d6c119069/5e8751b7aa63f43e28b8e2bb_noun_Email_3215035.svg"
+            alt=""
+          />
+          <h1>Email</h1>
+          <p>hi@fathomhealth.com</p>
+        </div>
+        <div class="box">
+          <img
+            src="https://assets.website-files.com/5e6c01bb5212506d6c119069/5e8751eb6b2b0379acfd3ce3_noun_chatting_2986337.svg"
+            alt=""
+          />
+          <h1>Chat</h1>
+          <p>Monday - Friday 9am - 7pm PST</p>
+        </div>
+        <div class="box">
+          <img
+            src="https://assets.website-files.com/5e6c01bb5212506d6c119069/5e8a0475f99d7c5ee4735bc0_noun_golden%20gate%20bridge_1982072.svg"
+            alt=""
+          />
+          <h1>San Francisco</h1>
+          <p>51 Federal Street Suite 402 San Francisco, CA 94107</p>
+        </div>
+        <div class="box">
+          <img
+            src="https://assets.website-files.com/5e6c01bb5212506d6c119069/5e8a04e306f6706b2dd2dd8b_noun_building_2525860.svg"
+            alt=""
+          />
+          <h1>Toronto</h1>
+          <p>250 University Avenue Suite 231 Toronto, ON M5H 3E5</p>
+        </div>
+      </div>
+    </div>
+    <div id="footer"></div>
   </body>
 </html>
+<script src="Scripts/contact.js" type="module"></script>
