contact page completed

--- a/contact.html
+++ b/contact.html
@@ -39,14 +39,10 @@
           <input type="number" name="" id="" required />
           <label for="">Message</label>
           <input type="text" name="" id="" required />
-          <input
-            type="checkbox"
-            name=""
-            id=""
-            placeholder="Yes, I want to subscribe to Fathom blog updates."
-          />
-          <span>Yes, I want to subscribe to Fathom blog updates. <br /></span>
-          <input type="submit" />
+          <span><input id="except" type="radio" />
+            Yes, I want to subscribe to Fathom blog updates.</form></span>
+          <br />
+          <input id="submit" type="submit" />
         </form>
       </div>
       <div id="sidebarb">
