cookies page update

--- a/cookie.html
+++ b/cookie.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>cookie page</title>
-    <link rel="stylesheet" href="cookie.css">
+    <link rel="stylesheet" href="Style/cookie.css">
+    <link rel="stylesheet" href="Style/navbar_style.css">
 </head>
 <body>
      <!-- header section -->
-     <!-- <div id="navbar_container"></div> -->
+     <div id="navbar_container"></div>
     <!-- !Top banner -->
 
     <div class="section banner width-section">
@@ -117,7 +118,7 @@
      
     
     <!-- footer section -->
-     <!-- <div id="footerfun_section"></div> -->
+     <div id="footerfun_section"></div>
 </div>
 </body>
 </html>
