cookie page added media query

--- a/guide.html
+++ b/guide.html
@@ -5,27 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guide Page</title>
-   <link rel="stylesheet" href="guide.css">
+   <link rel="stylesheet" href="/Style/guide.css">
    <link rel="stylesheet" href="./Style/navbar_style.css">
 </head>
 <body>
     <!-- navbar -->
     <div id="navbar_container"></div>
-    <!-- banner -->
-    <div class="body">
-        <div id="container">
-           <div class="row-banner">
-                <div class="row-heading">
+
+    <!-- newbanner -->
+    <div class="sectionb banner b-section">
+        <div class="container">
+            <div class="section-title"></div>
+            <!-- blank row div -->
+            <div class="row row-align-center"></div>
+            <div class="mid-container">
+                <div class="mid-col mid-col-2">
                     <h1 class="label-header text-white">GET THE GUIDE</h1>
                     <h1 class="heading">RFP guide for outsourced medical coding services</h1>
                 </div>
-                <div class="row-image w-col">
+                <div class="mid-col mid-col-1">
                     <div class="header-image-guide shadow-large">
-                        <img src="https://assets.website-files.com/5e6c01bb5212506d6c119069/5e95155be05ecd69b929df14_rfp-guide.png" srcset="https://assets.website-files.com/5e6c01bb5212506d6c119069/5e95155be05ecd69b929df14_rfp-guide-p-500.png 500w, https://assets.website-files.com/5e6c01bb5212506d6c119069/5e95155be05ecd69b929df14_rfp-guide.png 616w" sizes="(max-width: 479px) 54vw, (max-width: 767px) 55vw, 22vw" alt=""></div>
+                        <img id="header-img" src="https://assets.website-files.com/5e6c01bb5212506d6c119069/5e95155be05ecd69b929df14_rfp-guide.png" srcset="https://assets.website-files.com/5e6c01bb5212506d6c119069/5e95155be05ecd69b929df14_rfp-guide-p-500.png 500w, https://assets.website-files.com/5e6c01bb5212506d6c119069/5e95155be05ecd69b929df14_rfp-guide.png 616w" sizes="(max-width: 479px) 54vw, (max-width: 767px) 55vw, 22vw" alt="">
+                    </div>
                 </div>
-           </div>
-            
+            </div>
         </div>
+    </div>
+
+
+
+   
 
         <!-- mid section -->
         <div class="section wf-section">
@@ -43,6 +52,7 @@
                                 <li>RFP setup to get stronger responses</li>
                             </ul>
                         </div>
+                        <!-- form -->
                         <div class="contact-side">
                             <div class="text-large text-left text-dark">Complete this form to download the guide.<br></div>
                             <div class="w-embed w-script"><!--[if lte IE 8]>
