message box updaed

--- a/insight.html
+++ b/insight.html
@@ -40,7 +40,7 @@
                   <div>
                     <img src="https://blog.fathomhealth.com/hubfs/future.jpg" alt="">
                   </div>
-                
+                <div>
                   <div>
                     <h6>INDUSTRY NEWS</h6>
                     <h3>
@@ -49,28 +49,60 @@
                     <p><strong>1. A move towards pricing transparency 🔍</strong></p>
                     <p>There have been public calls for more pricing transparency in healthcare for decades, but limited public interest in an issue that few felt (or could even attribute) acutely. <a href="https://www.kff.org/report-section/ehbs-2017-section-7-employee-cost-sharing/attachment/figure%207_10-11/" rel="noopener" target="_blank">The explosion of high-deductible plans</a> has turned those disparate sparks into a flame.&nbsp;</p>
                   </div>
-
+                </div>
             </div>
       </div>
 
-
-
-
-
-
-
-
-
-    <div id="absolute-container">
-      <div class="message-box" >
-        <img src="" alt="">
+<div class="chatbox-wrapper">
+  <div class="chatbox-toggle">
+    <i class='bx bx-message-dots'></i>
+    <img  id="message-img" src="https://cdn2.iconfinder.com/data/icons/business-and-startup-line-vol-1/130/conversation__chat__bubble__messages_-1024.png" alt="">
+  </div>
+  <div class="chatbox-message-wrapper">
+    <div class="chatbox-message-header">
+      <div class="chatbox-message-profile">
+        <img src="https://images.unsplash.com/photo-1570295999919-56ceb5ecca61?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Nnx8bWFufGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60" alt="" class="chatbox-message-image">
+        <div>
+          <h4 class="chatbox-message-name">Jonathan Doe</h4>
+          <p class="chatbox-message-status">online</p>
+        </div>
+      </div>
+      <div class="chatbox-message-dropdown">
+        <i class='bx bx-dots-vertical-rounded chatbox-message-dropdown-toggle'></i>
+        <ul class="chatbox-message-dropdown-menu">
+          <li>
+            <a href="#">Search</a>
+          </li>
+          <li>
+            <a href="#">Report</a>
+          </li>
+        </ul>
+      </div>
     </div>
-
-
-
-
-
+    <div class="chatbox-message-content">
+      <h4 class="chatbox-message-no-message">You don't have message yet!</h4>
+      <!-- <div class="chatbox-message-item sent">
+        <span class="chatbox-message-item-text">
+          Lorem, ipsum, dolor sit amet consectetur adipisicing elit. Quod, fugiat?
+        </span>
+        <span class="chatbox-message-item-time">08:30</span>
+      </div>
+      <div class="chatbox-message-item received">
+        <span class="chatbox-message-item-text">
+          Lorem, ipsum, dolor sit amet consectetur adipisicing elit. Quod, fugiat?
+        </span>
+        <span class="chatbox-message-item-time">08:30</span>
+      </div> -->
     </div>
+    <div class="chatbox-message-bottom">
+      <form action="#" class="chatbox-message-form">
+        <textarea rows="1" placeholder="Type message..." class="chatbox-message-input"></textarea>
+        <button type="submit" class="chatbox-message-submit"><i class='bx bx-send' ></i></button>
+      </form>
+    </div>
+  </div>
+</div>
+
     <div class="container" >
       <div class="container1">    
         <div id="middle-bar">
