top-revenue page added

--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="Style/navbar_style.css" />
+
   </head>
   <body>
+    <div id="nav_container"></div>
     <div id="header">
       <div id="title">
         <h1>AI built for medical coding</h1>
@@ -69,6 +72,7 @@
       </div>
     </div>
     <button id="middle_button">EXPLORE SERVICES</button>
+
     <div id="animated">
       <h1>Fathom powers coding operations across</h1>
       <div>
@@ -90,7 +94,87 @@
         alt=""
       />
     </div>
-    <div id="benefits"></div>
+
+    <div id="benefits">
+      <h3>BENEFITS</h3>
+      <p>Cost, speed and accuracy</p>
+      <h2>No need to make trade-offs, choose all three</h2>
+    </div>
+
+    <div id="main">
+      <div class="submain">
+        <img
+          src="https://assets.website-files.com/5e6c01bb5212506d6c119069/5e81210fd802d6d4d78cc141_cost.svg"
+          alt=""
+        />
+        <h4>Cost</h4>
+        <p>Reduce the total cost of your coding operations by up to 50%.</p>
+      </div>
+      <div class="submain">
+        <img
+          src="https://assets.website-files.com/5e6c01bb5212506d6c119069/5e81250b9d7551effbcd8483_accuracy.svg"
+          alt=""
+        />
+        <h4>Accuracy</h4>
+        <p>Instantly reduce claim denials and mitigate audit risk.</p>
+      </div>
+      <div class="submain">
+        <img
+          src="https://assets.website-files.com/5e6c01bb5212506d6c119069/5e811b57a7eca1abcc96f85e_speed.svg"
+          alt=""
+        />
+        <h4>Speed</h4>
+        <p>Cut your coding turnaround by days, not hours or minutes.</p>
+      </div>
+      <div class="submain">
+        <img
+          src="https://assets.website-files.com/5e6c01bb5212506d6c119069/5e81244ea7eca1517f971f83_scale.svg"
+          alt=""
+        />
+        <h4>Scale</h4>
+        <p>Effortlessly add the capacity to code millions of charts per day.</p>
+      </div>
+      <div class="submain">
+        <img
+          src="https://assets.website-files.com/5e6c01bb5212506d6c119069/5e81244e957e0aca8631fe64_reliability.svg"
+          alt=""
+        />
+        <h4>Reliability</h4>
+        <p>Ensure that your coding operations never slow down or stop.</p>
+      </div>
+      <div class="submain">
+        <img
+          src="https://assets.website-files.com/5e6c01bb5212506d6c119069/5e81235429502fec7abc4315_security.svg"
+          alt=""
+        />
+        <h4>Security</h4>
+        <p>
+          Keep your PHI secure with industry leading technology and protocol.
+        </p>
+      </div>
+    </div>
+    <button id="last_button">Schedule a call</button>
+
+    <div id="last">
+      <img
+        src="https://assets.website-files.com/5e6c01bb5212506d6c119069/5e86784321e17d5b3e1ca947_dots-left.svg"
+        alt=""
+      />
+      <h1>Industry news and insights</h1>
+      <h2>Stay up to date with the latest from the Fathom team</h2>
+
+      <div id="blogcontainer"></div>
+    </div>
+
+    <div id="lastdiv">
+      <h1>Ready to get started?</h1>
+      <button>SCHEDULE A CALL</button>
+      <button>REQUEST A QUOTE</button>
+    </div>
+
+    <div id="footer"></div>
+
+    <!-- extra -->
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
@@ -100,3 +184,4 @@
     </script>
   </body>
 </html>
+<script type="module" src="Scripts/index.js"></script>
