--- a/cookie.html
+++ b/cookie.html
@@ -13,7 +13,7 @@
      <div id="navbar_container"></div>
     <!-- !Top banner -->
 
-    <div class="section banner width-section">
+    <div class="section banner width-section nav_pos_container">
         <div class="container">
             <div class="section-title">
                 <h1 class="heading">Cookie policy</h1>
@@ -123,10 +123,29 @@
 </body>
 </html>
 <script type="module">
-    import  {navbarfun, footerfun}  from './component/navbar.js';
+    import {
+      navbarfun,
+      footerfun,
+      hamburgerFun,
+      menu_cross_iconFun,
+    } from "./component/navbar.js";
     // console.log(navbarfun);
-    let nav_container = document.getElementById('navbar_container');
+    let nav_container = document.getElementById("navbar_container");
     nav_container.innerHTML = navbarfun();
-    let footerfun_section = document.getElementById('footerfun_section');
-    footerfun_section.innerHTML = footerfun();  
-</script>
+    let footerfun_section = document.getElementById("footerfun_section");
+    footerfun_section.innerHTML = footerfun();
+    let hamburger = document.getElementById("hamburger");
+    let menu_cross_icon = document.getElementById("menu_cross_icon");
+    let container = document.querySelector(".nav_pos_container");
+    hamburger.addEventListener("click", () => {
+      container.style.position = "absolute";
+      container.style.zIndex = -"1";
+      hamburgerFun();
+    });
+    menu_cross_icon.addEventListener("click", () => {
+      container.style.position = "relative";
+      container.style.zIndex = "0";
+      menu_cross_iconFun();
+    });
+  </script>
+  
