--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   </head>
   <body>
     <div id="nav_container"></div>
+
     <div id="header">
       <div id="title">
         <h1>AI built for medical coding</h1>
@@ -19,7 +20,9 @@
           unparalleled accuracy and cost?
         </p>
       </div>
-      <button><a href="contact.html">GET STARTED</a></button>
+      <button onclick="window.location.href ='contact.html'">
+        GET STARTED
+      </button>
     </div>
     <img
       src="https://assets.website-files.com/5e6c01bb5212506d6c119069/5e80153f9d7551fe59c817f0_dots.svg"
@@ -80,7 +83,9 @@
         </p>
       </div>
     </div>
-    <button id="middle_button">EXPLORE SERVICES</button>
+    <button onclick="window.location.href ='services.html'" id="middle_button">
+      EXPLORE SERVICES
+    </button>
 
     <div id="animated">
       <h1>Fathom powers coding operations across</h1>
@@ -162,7 +167,9 @@
         </p>
       </div>
     </div>
-    <button id="last_button">Schedule a call</button>
+    <button onclick="window.location.href ='schedule.html'" id="last_button">
+      Schedule a call
+    </button>
 
     <div id="last">
       <img
@@ -177,8 +184,12 @@
 
     <div id="lastdiv">
       <h1>Ready to get started?</h1>
-      <button>SCHEDULE A CALL</button>
-      <button>REQUEST A QUOTE</button>
+      <button onclick="window.location.href ='schedule.html'">
+        SCHEDULE A CALL
+      </button>
+      <button onclick="window.location.href ='quote.html'">
+        REQUEST A QUOTE
+      </button>
     </div>
 
     <div id="footer"></div>
