Update navbar and doing small changes in css

--- a/schedule.html
+++ b/schedule.html
@@ -10,24 +10,26 @@
   </head>
   <body>
     <div id="navbar_container"></div>
-    <div class="container nav_pos_container">
-      <div class="header_container">
-        <div class="section_title">
-          <h1 class="heading">Schedule a consultation</h1>
-          <div class="heading_subtitle">
-            Use the form below to book a quick call to see what Fathom can do
-            for your coding operations.
+    <div class="nav_pos_container">
+      <div class="container">
+        <div class="header_container">
+          <div class="section_title">
+            <h1 class="heading">Schedule a consultation</h1>
+            <div class="heading_subtitle">
+              Use the form below to book a quick call to see what Fathom can do
+              for your coding operations.
+            </div>
           </div>
         </div>
       </div>
+      <!-- Schedule -->
+      <div
+        class="meetings-iframe-container"
+        data-src="https://meetings.hubspot.com/andrew721/10-minute-consult-with-fathom?embed=true"
+      ></div>
+      <!-- footer section -->
+      <div id="footerfun_section"></div>
     </div>
-    <!-- Schedule -->
-    <div
-      class="meetings-iframe-container"
-      data-src="https://meetings.hubspot.com/andrew721/10-minute-consult-with-fathom?embed=true"
-    ></div>
-    <!-- footer section -->
-    <div id="footerfun_section"></div>
   </body>
 </html>
 <script type="module">
