--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="./Style/index.css" />
     <link rel="stylesheet" href="Style/navbar_style.css" />
-
   </head>
   <body>
     <div id="nav_container"></div>
